# rms-hst-targets

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTES.txt  NOTES_RANDOM.txt  README.md  pyproject.toml
.cursor/: settings.json
.cursor/rules/: environment_best_practices.mdc  python_best_practices.mdc
.cursor/skills/python-codebase-analysis/: reference.md
.cursor/skills/run-all-checks/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run-tests.yml
caches/: SPT_CACHE
caches/COMET_CACHE/: Interstellar_object-2026-05-15.html  Interstellar_object-2026-07-07.html  Interstellar_object.html  List_of_Halley-type_comets-2026-05-15.html  List_of_Halley-type_comets.html  List_of_centaurs_(small_Solar_System_bodies).html  List_of_long-period_comets-2026-05-15.html  List_of_long-period_comets.html  List_of_near-parabolic_comets-2026-05-15.html  List_of_near-parabolic_comets.html  List_of_numbered_comets-2026-05-15.html  List_of_numbered_comets.html  List_of_periodic_comets-2026-05-15.html  List_of_periodic_comets.html  icq_names1.txt  johnstonarchive_tnoslist.txt  mpc_PeriodicCodes-2026-05-08.txt  mpc_PeriodicCodes.txt  sbdb_query_results-2026-05-15.csv  sbdb_query_results.csv  sbn_periodic_comets.txt
caches/MPC_CACHE/: 1.html  10.html  100213.html  10123.html  101955.html  10370.html  103P.html  106.html  10664.html  106P.html  107.html  10783.html  108P.html  109.html  10P.html  11.html  110.html  110P.html  111.html  1110113.html  112367.html  112P.html  11351.html  1137.html  11372.html  1143.html  1144.html  114P.html  11768.html  118378.html  118702.html  119066.html  119067.html  119315.html  119473.html  119878.html  119956.html  119979.html  12.html  120061.html  (+2133 more)
caches/TARGET_XML_CACHE/: $LOOKUP.pickle  asteroid.743_eugenisis_1.0.xml  laboratory_analog.exoplanet_1.0.xml  laboratory_analog.pluto_1.0.xml  planet.trappist-1e_1.1.xml  planetary_system.jupiter_system_1.1.xml  planetary_system.saturn_system_1.1.xml  planetary_system.saturn_system_1.2.xml
docs/: conf.py  data-and-caches.md  handling-identification-failures.md  how-it-works.md  index.rst  module.rst
programs/: build_spt_tests.py  identify_visit.py  reality_check_comets.csv  reality_check_radec.py  retrieve_mast_moving_target_spts.py  update_cometdb.py  update_target_xml_cache.py
scripts/: read-docs.sh  run-all-checks.sh
support/: __init__.py  build_spt_tests.py  reality_check_asteroids.csv  reality_check_radec.py  retrieve_mast_moving_target_spts.py  update_cometdb.py  update_target_xml_cache.py
targets/: _DISALLOWED_MINOR_PLANET_NAMES.py  _HST_PROGRAM_OVERRIDES.py  _IDENTIFY_SMALL_BODY_TESTER_OUPUT.txt  _REUSED_NAMES.py  _STANDARD_BODY_LIST.py  _TARGET_STRING_REPAIRS.py  _TARGNAME_PREFIX_SUFFIX_PATTERNS.py  _TEST_OUTPUT.txt  _UNDIAGNOSTIC_TARGET_WORDS.py  __init__.py  __init__.pyi  _utils.py  categorize_minor_planet.py  comet_identifiers.py  errors.py  header_parsing.py  hst_repairs.py  hst_target_identifications.py  identify_comet.py  identify_minor_planet.py  identify_small_body.py  identify_standard_body.py  identify_target.py  identify_targets.py  mast_moving_target_support.py  minor_planet_identifiers.py  orbital_radec.py  reality_check_offsets.csv  reality_check_radec.py  remote_listdir.py  roman.py  standard_bodies.py  target_xml_cache_support.py  target_xml_support.py  targettype.py  tnoslist.html.html  word_similarity.py  xml_support.py
targets/cometdb/: __init__.py  _build_centaur_dicts.py  _build_comet_dicts.py  _get_icq_comets.py  _get_johnston_centaurs.py  _get_mpc_comets.py  _get_sbn_comets.py  _get_ssd_comets.py  _get_wiki_centaurs.py  _get_wiki_comets.py  _utils.py  query_centaur_by_name.py  query_comet_by_elements.py  query_comet_by_name.py  repair_comet.py
targets/mpc_tools/: __init__.py  _utils.py  mpc_body_dict.py  mpc_packing.py  mpc_query_by_elements.py  mpc_query_by_name.py
templates/: TARGET_LABEL_1.0.xml
tests/: SPT_TESTS.py  SPT_TESTS_OUTPUT.txt  SPT_TESTS_v1.py  _IDENTIFY_SMALL_BODY_TESTER.py  test_categorizer.py  test_hst_repairs_output.py  test_identify_target.py  test_mpc_packing.py  test_orbital_radec.py  test_roman.py  test_target_xml_cache_support.py  test_target_xml_support.py  test_targettype.py  test_xml_support.py
